--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="hero">
         <nav>
-            <img src="images/logo.jpeg" width="50" height="50" class="logo">
+            <img src="logo.jpeg" width="50" height="50" class="logo">
             <ul>
                 <li><a href="">HOME</a></li>
                 <li><a href="">ABOUT</a></li>
