adding portrait and updating index.html

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         <div class="img-box">
 
-            <img src="images/me.jpg" class="main-img">
+            <img src="./portrait.JPG" class="main-img">
         </div>
 
         <div class="social-links">
